# ObjectDetection

./: .gitignore  .pre-commit-config.yaml  404.html  LIGHTNING_MIGRATION.md  README.md  index.html  mkdocs.yml  pyproject.toml  search.json  sitemap.xml  try.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
conf/: config.yaml  config_tiny.yaml
conf/model/: detr.yaml  dino_v3.yaml  ssd.yaml  vit_faster_rcnn.yaml
config/: index.html
data/coco_tiny/annotations/: instances_train2017.json  instances_val2017.json
docs/: config.md  getting-started.md  index.md  logging.md  migration.md  models.md  scripts.md  training.md
getting-started/: index.html
logging/: index.html
migration/: index.html
models/: index.html
scripts/: check_tiny_coco.py  index.html  make_tiny_coco.py  sample_dino_v3.py  visualize_dino_pca.py
search/: search_index.json
src/: engine.py
src/core/: __init__.py  callbacks.py  data_module.py  experiment_base.py
src/models/: detr.py  dino_v3.py  mlp.py  model_base.py  ssd.py  vit_faster_rcnn.py
training/: index.html
