[project]
name = "objectdetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "huggingface-hub>=1.4.1",
    "hydra-core>=1.3.2",
    "lightning>=2.6.1",
    "mlflow>=3.9.0",
    "pillow>=12.1.0",
    "pycocotools>=2.0.11",
    "pydantic>=2.12.5",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.2.0",
    "zensical>=0.0.23",
]

[project.scripts]
zensical = "zensical.__main__:main"

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.14.14"]
docs = ["zensical>=0.0.1"]
